# Wordiff

./: LICENSE  pyproject.toml  readme.md
src/wordiff/: wordiff.py
