[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordiff"
version = "0.0.4"
authors = [
  { name="Martyscode", email="author@example.com" },
]
description = "Identify the most distinctive words when comparing text across different groups."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"